@@ -4,6 +4,14 @@
 
 ** Support for Guile 2.2 added
 
+** Current locale is installed
+
+I.e., now the following displays the proper text:
+
+  gdpipe '(display "привет") (newline)'
+
+Previously it displayed "??????".
+
 ** Remove unsuitable FIFO file on start-up
 
 Previously when FIFO file existed, but was unsuitable (wrong
